# kaggle

./: .dockerignore  .gitignore  Dockerfile.cpu  Dockerfile.gpu  README.md  docker-compose.yml  pyproject.toml
baselines/rogii_alpha_frontier_125/: kernel-metadata.json  rogii-alpha-frontier-1-25.ipynb
baselines/rogii_contact_smoother/: kernel-metadata.json  rogii-contact-smoother.ipynb
baselines/rogii_lb7201_public_gold_conservative/: kernel-metadata.json
baselines/rogii_lb7295_public_rebuild_submit/: kernel-metadata.json
baselines/rogii_lb_7_201/: kernel-metadata.json  rogii-lb-7-201.ipynb
baselines/rogii_light_u_smoother/: kernel-metadata.json  rogii-light-u-smoother.ipynb
docs/: candidate-audit-2026-06-20.md  competition-standard.md  data-and-cv-analysis-2026-06-21.md
rogii/: __init__.py  device.py
scripts/: analyze_data_distribution.py  analyze_overlap_shift.py  audit_candidates.py  check_env.py  download_assets.py  kaggle_gpu_smoke.py  make_contact_smoother_variants.py  prepare_kernel_submit.py  prepare_static_submission_kernel.py  score_geometry_audit.py  smoke_read_data.py  train_contact_residual_cv.py  train_prefix_delta_cv.py  validate_submission.py
