[project]
name = "rogii-wellbore-geology"
version = "0.1.0"
description = "CPU-first, GPU-compatible environment for the ROGII Wellbore Geology Prediction Kaggle competition."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "catboost>=1.2.8",
    "ipykernel>=6.30.0",
    "jupyterlab>=4.4.0",
    "kaggle>=1.7.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.0",
    "numba>=0.61.0",
    "numpy>=2.2.0",
    "optuna>=4.5.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pywavelets>=1.8.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.7.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
